<?xml version="1.0"?>
<package>
  <name>robond-simple_arm</name>
  <version>0.0.0</version>
  <description>The simple_arm add-on package</description>

  <!-- maintainer and author -->
  <maintainer email="shantanu5996@gmail.com">Shantanu Wadnerkar</maintainer>
  <author email="shantanu5996@gmail.com">Shantanu Wadnerkar</author>

  <!-- License -->
  <license>TODO</license>

  <!-- build and run dependencies -->
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <!-- <run_depend>controller_manager</run_depend>
  <run_depend>effort_controllers</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend> -->
  <run_depend>message_runtime</run_depend>
  <!-- <run_depend>xacro</run_depend> -->
  
  <!-- export -->
  <export></export>

</package>
